Fixed title formatting on mobile

--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -18,3 +18,7 @@
   border-radius: 100px;
   background-color: orange;
 }
+
+.title {
+  width: 100%;
+}
